Fixed top margin to be responsive so logo is never covered.

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
 body {
     background: var(--accent-200);
     display: flex;
+    position: relative;
     justify-content: center;
 }
 
@@ -88,11 +89,8 @@ body {
 
 @media (max-width: 400px) {
   #white-container {
-    margin-top: 11vh;
-
+    margin-top: 90px;
   }
-
-
 }
 
 #inputs, #outputs {
